finished working on order page + navbar overlap fix + items order in menu fixed

--- a/components/OrderPanel/_order-submit.scss
+++ b/components/OrderPanel/_order-submit.scss
@@ -2,6 +2,7 @@
   border-top: 1px solid #1b5583;
   padding-top: 15px;
   margin-top: 10;
+  margin: 0 10px;
 
   .cost-items-container {
     .cost-item {
