--- a/components/OrderPanel/_ordered-items.scss
+++ b/components/OrderPanel/_ordered-items.scss
@@ -1,5 +1,5 @@
 .ordered-items {
-  padding: 0 10px;
+  padding: 0 25px 0 10px;
   .title {
     font-size: 20px;
     margin-bottom: 20px;
